infrastructure/base/locust/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust-master
  namespace: locust
  labels:
    app: locust
    component: master
spec:
  selector:
    app: locust
    component: master
  ports:
    - name: web
      port: 8089
      targetPort: 8089
    - name: master
      port: 5557
      targetPort: 5557
    - name: master-bind
      port: 5558
      targetPort: 5558
