infrastructure/base/locust/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: locust
  namespace: locust
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-ingress
      sectionName: tools
  hostnames:
    - "locust.tools.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: locust-master
          port: 8089
